--- a/style/pages/home/_contact.scss
+++ b/style/pages/home/_contact.scss
@@ -1,36 +1,42 @@
-.contact{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
+.contact {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+
 	gap: 4rem;
 	margin: 0.5rem;
-    text-align: center;
+	text-align: center;
 
-    padding-block: 4rem;
+	padding-block: 4rem;
 
-    @media screen and (max-width: 768px) {
+
+	@media screen and (max-width: 768px) {
 		gap: 2rem;
 	}
 
-    &__left, &__right{
-        width: 50%;
-    }
+	&__left,
+	&__right {
+		width: 50%;
 
-    &__left{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+		@media screen and (max-width: 768px) {
+			width: 100%;
+		}
+	}
 
-        h1 {
+	&__left {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+
+		h1 {
 			font-size: 64px;
 			margin-bottom: 1rem;
 
-            span{
-                color: var(--color-blue-900)
-            }
+			span {
+				color: var(--color-blue-900);
+			}
 			@media screen and (max-width: 768px) {
 				font-size: 32px;
 			}
@@ -49,83 +55,89 @@
 			}
 		}
 
-        form{
-            
-            .form-row{
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                justify-content: center;
+		form {
+			@media screen and (max-width: 768px) {
+				width: 100%;
+			}
+			.form-row {
+				display: flex;
+				flex-direction: row;
+				align-items: center;
+				justify-content: center;
 
-                gap: 1rem;
-            }
-            
-            input{
-                padding-block: 0.75rem;
-                width: 100%;
-                
-                padding-inline: 1rem;
-                border: 1px solid var(--color-gray-500);
-                border-radius: 0.5rem;
-                
-                font-size: 18px;
-                
-                margin-bottom: 1rem;
-            }
+				gap: 1rem;
 
-            textarea{
-                display: block;
-                height: 256px;
-                width: 100%;
-                
-                padding: 1rem;
-                border: 1px solid var(--color-gray-500);
-                border-radius: 0.5rem;
-                
-                font-size: 18px;
-                
-                margin-bottom: 1rem;
-            }
+				@media screen and (max-width: 768px) {
+					flex-direction: column;
+				}
+			}
 
-            .submit-contact{
-                cursor: pointer;
+			input {
+				padding-block: 0.75rem;
+				width: 100%;
 
-                background-color: var(--color-blue-900);
-                color: var(--color-gray-100);
-                font-weight: 800;
+				padding-inline: 1rem;
+				border: 1px solid var(--color-gray-500);
+				border-radius: 0.5rem;
 
-                @include Alive;
-            }
-        }
-    }
+				font-size: 18px;
 
-    &__right{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+				margin-bottom: 1rem;
+			}
 
-        &-card{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            gap: 1rem;
-            margin-bottom: 1rem;
+			textarea {
+				display: block;
+				height: 256px;
+				width: 100%;
 
-            color: var(--color-gray-500);
+				padding: 1rem;
+				border: 1px solid var(--color-gray-500);
+				border-radius: 0.5rem;
 
-            border-bottom: 1px solid var(--color-gray-100);
-            width: fit-content;
+				font-size: 18px;
 
-            a{
-                font-size: 20px;
-                text-decoration: none;
-                color: var(--color-gray-500);
-            }
+				margin-bottom: 1rem;
+			}
 
-            svg{
-                width: 16px;
-            }
-        }
-    }
+			.submit-contact {
+				cursor: pointer;
+
+				background-color: var(--color-blue-900);
+				color: var(--color-gray-100);
+				font-weight: 800;
+
+				@include Alive;
+			}
+		}
+	}
+
+	&__right {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		&-card {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			justify-content: center;
+			gap: 1rem;
+			margin-bottom: 1rem;
+
+			color: var(--color-gray-500);
+
+			border-bottom: 1px solid var(--color-gray-100);
+			width: fit-content;
+
+			a {
+				font-size: 20px;
+				text-decoration: none;
+				color: var(--color-gray-500);
+			}
+
+			svg {
+				width: 16px;
+			}
+		}
+	}
 }
